# grbl-kunzig

./: README.md  grbl settings.nc  partitions.csv  sdkconfig  sdkconfig.old
components/websocket/: websocket.c  websocket_server.c
components/websocket/include/: websocket.h  websocket_server.h
main/: CMakeLists.txt  EEPROM.cpp  HardwareSerial.cpp  coolant_control.cpp  esp32-hal-cpu.c  esp32-hal-matrix.c  esp32-hal-misc.c  esp32-hal-uart.c  gcode.cpp  grbl_eeprom.cpp  grbl_limits.cpp  main.cpp  motion_control.cpp  notifications_service.cpp  nuts_bolts.cpp  planner.cpp  probe.cpp  protocol-old.cpp  protocol.cpp  report.cpp  serial.cpp  serial2socket.cpp  settings.cpp  spindle_control.cpp  stepper.cpp  system.cpp
main/include/: EEPROM.h  HardwareSerial.h  Printable.h  commands.h  config.h  cpu_map.h  esp32-hal.h  grbl.h  grbl_limits.h  main.h  notifications_service.h  nuts_bolts.h  print.h  protocol.h  report.h  serial.h  serial2socket.h  servo_pen.h  solenoid_pen.h  stepper.h  system.h
main/include/newlib/: inttypes.h  locale.h  malloc.h  reent.h  stdio.h  stdlib.h  string.h  time.h  wchar.h  wctype.h
main/include/newlib/sys/: _types.h  reent.h  types.h  unistd.h
